# multi-camera-system

./: .gitignore  .pre-commit-config.yaml  .tool-versions  README.md  pyproject.toml
multi-camera-server/: .env.example  .pre-commit-config.yaml  Dockerfile  docker-compose.yaml  pyproject.toml  setup.sh
multi-camera-server/src/: camera_main.py  camera_record_loop.py  camera_record_loop_dummy.py  common_config.py  common_types.py  data_store.py  db_create_initial_data.py  event_handler.py  file_storage.py  sensor_main.py  sensor_toggle_record.py  server_core.py  server_main.py  server_toggle_start.py  system_tester.py  video_stream_consumer.py  video_stream_producer.py
multi-camera-server/src/templates/: index.html
multi-camera-server/tests/: test_server.py  test_storage.py
multi-camera-ui/: Dockerfile  package-lock.json  package.json  vite.config.ts
multi-camera-ui/src/: App.tsx  CameraStatusList.tsx  MainComponent.tsx  api.ts  types.ts  useCameraStatusUpdater.ts  useCameraStatusUpdaterNotify.ts  useCameraStreamUpdater.ts
multi-camera-ui/src/components/: CameraActions.tsx  CameraStatusList.tsx  CameraStreams.tsx  RouteActions.tsx  RouteCameras.tsx  RouteList.tsx  VideoPlayer.tsx
src/: camera_main.py  camera_record_listener_db.py  camera_record_loop.py  camera_record_loop_dummy.py  camera_send_status_db.py  camera_start_listener_db.py  camera_types.py  common_config.py  common_types.py  config.py  data_steramer.py  data_store.py  data_store_sqlite.py  db_create_initial_data.py  event_handler.py  file_storage.py  file_upload.py  sensor_main.py  sensor_toggle_record.py  server_check_status_db.py  server_core.py  server_main.py  server_toggle_start.py  system_tester.py  types.py  video_stream_consumer.py  video_stream_producer.py
src/templates/: index.html
tests/: test_storage.py
