[project]
name = "multi_camera_system"
version = "0.0.1"
authors = [
  { name="Tomi Tuhkanen", email="tomi.tuhkanen@iki.fi" },
]
description = "Multi camera system"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "opencv-python",
    "numpy",
    "bleak"
]

[project.optional-dependencies]
dev = [
    "flake8-pyproject",
    "pytest",
    "pylint",
    "mypy",
    "black",
    "isort",
    "pre-commit"
]

[tool.flake8]
exclude = ".venv, .git, .eggs, __pycache__, build, dist"
max-line-length = 120

[tool.pylint.messages_control]
max-line-length = 120
disable = [
    "missing-docstring",
]

[tool.black]
line-length = 120

[tool.isort]
line_length = 120
ensure_newline_before_comments = true

[tool.mypy]
ignore_missing_imports = true
